--- a/src/components/Timer/Timer.scss
+++ b/src/components/Timer/Timer.scss
@@ -9,7 +9,7 @@
   
 .timer {
     font-size: 10rem;
-    color: #6200ea;
+    color: #005ea8;
     font-weight: 700;
     padding: 1rem;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
